--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   },
   "homepage": "https://github.com/TheVerilly/crypto-premium-club#readme",
   "scripts": {
-    "clean": "rimraf public/{css/*,js/*,images/*}",
-    "autoprefixer": "postcss -u autoprefixer -r public/css/*",
-    "scss": "node-sass --output-style compressed -o public/css src/scss",
-    "lint": "eslint src/js || true",
+    "clean": "rimraf ./public/{css/*,js/*,images/*}",
+    "autoprefixer": "postcss -u autoprefixer -r ./public/css/*",
+    "scss": "node-sass --output-style compressed -o ./public/css ./src/scss",
+    "lint": "eslint ./src/js || true",
     "lint-scss": "stylelint src/scss/*.scss --syntax scss || true",
-    "uglify": "mkdirp public/js -p && uglifyjs src/js/*.js -m -c -o public/js/main.min.js",
-    "imagemin": "imagemin src/images/* -o public/images",
-    "serve": "browser-sync start --server --files public/css/*.css, public/js/*.js, **/*.html, !node_modules/**/*.html",
+    "uglify": "mkdirp ./public/js -p && uglifyjs ./src/js/*.js -m -c -o ./public/js/main.min.js",
+    "imagemin": "imagemin ./src/images/* -o ./public/images",
+    "serve": "browser-sync start --server --files \"./public/css/*.css, ./public/js/*.js, **/*.html, !node_modules/**/*.html\"",
     "build:css": "run-s lint-scss scss autoprefixer",
     "build:js": "run-s lint uglify",
     "build:images": "run-s imagemin",
     "build": "run-s build:*",
-    "watch:css": "onchange src/scss -- run-s build:css",
+    "watch:css": "onchange \"./src/scss\" -- run-s build:css",
+    "watch:js": "onchange \"./src/js\" -- run-s build:js",
+    "watch:images": "onchange \"./src/images\" -- run-s build:images",
     "watch": "run-p serve watch:*",
     "postinstallpostinstall": "run-s build watch"
   },
