--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "build:js": "run-s lint uglify",
     "build:images": "run-s imagemin",
     "build": "run-s build:*",
-    "watch:css": "onchange ./src/scss -- run-s build:css",
-    "watch:js": "onchange ./src/js -- run-s build:js",
-    "watch:images": "onchange ./src/images -- run-s build:images",
+    "watch:css": "run-s build:css",
+    "watch:js": "run-s build:js",
+    "watch:images": "run-s build:images",
     "watch": "run-p serve watch:*",
     "postinstallpostinstall": "run-s build watch"
   },
