--- a/package.json
+++ b/package.json
@@ -12,41 +12,17 @@
   },
   "homepage": "https://github.com/TheVerilly/crypto-premium-club#readme",
   "scripts": {
-    "clean": "rimraf public/{css/*,js/*,images/*}",
-    "autoprefixer": "postcss -u autoprefixer -r public/css/*",
-    "scss": "node-sass --output-style compressed -o public/css src/scss",
-    "lint": "eslint src/js || true",
-    "lint-scss": "stylelint src/scss/*.scss --syntax scss || true",
-    "uglify": "mkdirp public/js -p && uglifyjs src/js/*.js -m -c -o public/js/main.min.js",
-    "imagemin": "imagemin src/images/* -o public/images",
-    "serve": "browser-sync start --server --files \"public/css/*.css, public/js/*.js, **/*.html, !node_modules/**/*.html\"",
-    "build:css": "run-s lint-scss scss autoprefixer",
-    "build:js": "run-s lint uglify",
-    "build:images": "run-s imagemin",
-    "build": "run-s build:* && cp index.html public",
-    "watch:css": "run-s build:css",
-    "watch:js": "run-s build:js",
-    "watch:images": "run-s build:images",
-    "watch": "run-p serve watch:*",
-    "postinstallpostinstall": "run-s build watch"
+    "serve": "gulp serve",
+    "build": "gulp"
   },
   "devDependencies": {
-    "autoprefixer": "^9.0.1",
-    "browser-sync": "^2.12.8",
-    "eslint": "^5.2.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "imagemin-cli": "^3.0.0",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^4.9.2",
-    "npm-run-all": "^4.1.3",
-    "onchange": "^4.1.0",
-    "postcss-cli": "^6.0.0",
-    "rimraf": "^2.5.4",
-    "stylelint": "^9.4.0",
-    "uglify-es": "^3.3.10"
+    "@babel/core": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
+    "browser-sync": "^2.27.7",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-cli": "^2.3.0",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.49.0"
   }
 }
