--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   },
   "homepage": "https://github.com/TheVerilly/crypto-premium-club#readme",
   "scripts": {
-    "serve": "gulp serve",
-    "build": "gulp"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
-    "browser-sync": "^2.27.7",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-cli": "^2.3.0",
-    "gulp-sass": "^5.1.0",
-    "sass": "^1.49.0"
+    "babel-loader": "^8.2.3",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.2",
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3",
+    "webpack-obfuscator": "^3.5.0"
   }
 }
